[gd_scene load_steps=6 format=3 uid="uid://b128myar7a7y1"]

[ext_resource type="Script" uid="uid://tn051d30ouhs" path="res://main/cell_state_panel/cell_state_panel.gd" id="1_tl2sj"]
[ext_resource type="Texture2D" uid="uid://drrup7wbb1mue" path="res://icon/EnergyIcon.png" id="2_o5trr"]
[ext_resource type="Script" uid="uid://dd7vxd77cm12g" path="res://shared/equal_hbox_container.gd" id="2_rhete"]
[ext_resource type="Script" uid="uid://b4yy4bin0h1ms" path="res://style_nodes/label_style.gd" id="3_bpvk1"]
[ext_resource type="Texture2D" uid="uid://bfu1wwfe0eytf" path="res://icon/LifeIcon.png" id="3_rhete"]

[node name="CellStatePanel" type="PanelContainer"]
offset_right = 563.0
offset_bottom = 89.0
theme_type_variation = &"NestedDetailPanel"
script = ExtResource("1_tl2sj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CellTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DetailTitleLabel"
text = "(cell title)"
text_overrun_behavior = 3

[node name="CellStatePanel" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_rhete")
metadata/_custom_type_script = "uid://dd7vxd77cm12g"

[node name="LabelStyle" type="Node" parent="VBoxContainer/CellStatePanel"]
script = ExtResource("3_bpvk1")
font_color = Color(0.94, 0.94, 0.1504, 1)
metadata/_custom_type_script = "uid://b4yy4bin0h1ms"

[node name="EnergyPanel" type="PanelContainer" parent="VBoxContainer/CellStatePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MajorSubDetailPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
text = "Energy"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_o5trr")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/HBoxContainer1"]
layout_mode = 2
theme_override_constants/margin_top = -14
theme_override_constants/margin_bottom = -14

[node name="StartEnergy" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/HBoxContainer1/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Cell at current step energy"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 56
text = "88"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "/"

[node name="MaxEnergy" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Maximum cell energy"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "99"

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "Gained:"

[node name="NewEnergy" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Energy gained in current step"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "+99"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "Wanted:"

[node name="EnergyWanted" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Energy wanted to trigger all actions"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "+99"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "Used:"

[node name="EnergyUsed" type="Label" parent="VBoxContainer/CellStatePanel/EnergyPanel/HBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Energy used in current step"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "-99"
horizontal_alignment = 1

[node name="LifePanel" type="PanelContainer" parent="VBoxContainer/CellStatePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MajorSubDetailPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
text = "Life"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_rhete")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -14
theme_override_constants/margin_bottom = -14

[node name="StartLife" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Cell life at current step"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 56
text = "99"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "/"

[node name="MaxLife" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Maximum cell life"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "99"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "Gained:"

[node name="NewLife" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Life gained in current step"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "+99"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "Lost:"

[node name="LifeLost" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Life lost in current step"
mouse_filter = 0
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)
theme_override_font_sizes/font_size = 10
text = "-99"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel"]
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/CellStatePanel/LifePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/CellStatePanel/LifePanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MajorSubDetailPanelLabel"
theme_override_colors/font_color = Color(0.94, 0.94, 0.1504, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CellStatePanel/LifePanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GeneContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
